port to 1.20.6
remove forge module as it was causing issues. simplifies some things anyways.